# reward-hub

./: .dockerignore  .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docker/: compose.common.yaml  compose.development.yaml
docker/django/: Dockerfile
docker/django/celery/: entrypoint.sh
docker/django/init/: entrypoint-development.sh
src/: manage.py
src/apps/accounts/: admin.py  apps.py  managers.py  models.py  validators.py
src/apps/accounts/api/: schema.py  serializers.py  urls.py  views.py
src/apps/accounts/migrations/: 0001_initial.py  0002_user_coins.py
src/apps/auth/: apps.py
src/apps/auth/api/: urls.py
src/apps/common/: exceptions.py
src/apps/common/models/: mixins.py
src/apps/core/admin/: __init__.py  admin.py  sites.py
src/apps/core/migrations/: 0001_set_site_domain_and_name.py
src/apps/rewards/: admin.py  apps.py  managers.py  models.py  tasks.py
src/apps/rewards/api/: schema.py  serializers.py  urls.py  views.py
src/apps/rewards/migrations/: 0001_initial.py  0002_rewardrequestbyuser.py
src/config/: asgi.py  celery_app.py  urls.py  wsgi.py
src/config/api/: exceptions.py  pagination.py  urls.py
src/config/api/docs/: description.md  urls.py
src/config/settings/: __init__.py  base.py
src/config/settings/components/: api.py  celery.py  logging_.py
src/templates/admin/: base.html
src/utils/: __init__.py  polymorphic_string_handlers.py
